fixed alignment (#438)

--- a/ckanext/querytool/fanstatic/less/public-query-tool.less
+++ b/ckanext/querytool/fanstatic/less/public-query-tool.less
@@ -756,6 +756,10 @@ div[class^="dt-header"] {
   margin: 10px 0 30px 0px;
 }
 
+.selection_label {
+  margin-left:22px;
+}
+
 /* VIZ Media Query */
 @media screen and (max-width:1200px){
   .filters-wrapper {
